Azkaban
=======

Version 0.2.0 (02/07/2014)
--------------------------

* Simpler job options handling. `Job.get_option` and `Job.get_option_list`
  should allow for easier handling of special job option names.
* Logging is now separate from the output of `Project.main`. It is now
  exclusively meant to be used for debugging.
* `Project.merge` is renamed to `Project.merge_into` to be more explicit. Note
  that the direction of the merge has also been reversed.
* `Project.add_job` and `Project.add_file` do not raise errors anymore when
  they used to. These same errors are delayed until the project is built.


Version 0.1.0 (10/17/2013)
--------------------------

* Initial release