@@ -4,11 +4,11 @@
 """Azkaban CLI: a lightweight command line interface for Azkaban.
 
 Usage:
-  azkaban PROJECT run [-m MODE] ([-u USER] URL | -a ALIAS) FLOW [JOB ...]
-  azkaban PROJECT upload ([-u USER] URL | -a ALIAS) [SCRIPT | -z ZIP]
+  azkaban PROJECT run [-m MODE] (-u URL | -a ALIAS) FLOW [JOB ...]
+  azkaban PROJECT upload (-u URL | -a ALIAS) [SCRIPT | -z ZIP]
   azkaban PROJECT build [-oz ZIP] [SCRIPT]
   azkaban PROJECT list [-fp] [SCRIPT]
-  azkaban PROJECT view [SCRIPT] JOB
+  azkaban PROJECT view JOB [SCRIPT]
   azkaban -h | --help | -v | --version
 
 Commmands:
@@ -32,10 +32,9 @@ Arguments:
                                 contain an `azkaban.Project` instance with name
                                 corresponding to PROJECT. If not specified,
                                 Azkaban CLI will look for a file named
-                                `jobs.py` in the current working directory.
+                                'jobs.py' in the current working directory.
   FLOW                          Workflow (job without children) name.
   JOB                           Job name.
-  URL                           Azkaban endpoint (with protocol).
 
 Options:
   -a ALIAS --alias=ALIAS        Alias to saved URL and username. Will also try
@@ -49,8 +48,12 @@ Options:
   -p --pretty                   Organize jobs by type and show dependencies. If
                                 used with the `--files` option, will show the
                                 size of each and its path in the archive.
-  -u USER --user=USER           Username used to log into Azkaban (defaults to
-                                the current user, as determined by `whoami`).
+  -u URL --url=URL              Azkaban endpoint (with protocol), for example:
+                                'http://azkaban.server'. Optionally, you can
+                                specify a username: 'me@http://azkaban.server'
+                                (defaults to the current user, as determined by
+                                `whoami`). If you often use the same url,
+                                consider using the `--alias` option instead.
   -v --version                  Show version and exit.
   -z ZIP --zip=ZIP              For `upload` and `list` commands, the path to
                                 an existing project zip archive. For `build`,
@@ -59,7 +62,7 @@ Options:
 
 Examples:
   azkaban my_project run -a my_alias my_flow
-  azkaban my_project upload http://url.to.azkaban
+  azkaban my_project upload -u http://url.to.azkaban
   azkaban my_project build -z archive.zip script.py
 
 Azkaban CLI returns with exit code 1 if an error occurred and 0 otherwise.
@@ -98,16 +101,22 @@ def get_project(name, script=None):
       msg = 'unable to find project with name %r in script %r'
       raise AzkabanError(msg % (name, script))
 
-def main(args):
+def main(project=None):
   """Command line argument parser.
 
-  :param args: command line arguments dictionary (as parsed by docopt)
+  :param project: `EmptyProject` or `Project` instance
 
   """
-  name = args['PROJECT']
+  args = docopt(__doc__, version=__version__)
+  print args
   try:
+    if not project:
+      script = args['SCRIPT']
+      if script:
+        project = get_project(name, script)
+      else:
+        project = EmptyProject(name)
     if args['run']:
-      project = EmptyProject(name)
       self.run(
         flow=args['FLOW'],
         url=args['URL'],
@@ -115,13 +124,11 @@ def main(args):
         alias=args['--alias'],
       )
     if args['build']:
-      project = get_project(name, args['SCRIPT'])
       project.build(
-        args['--zip'] or '%s.zip' % (name, ),
+        args['--zip'] or '%s.zip' % (project.name, ),
         overwrite=args['--overwrite']
       )
     elif args['upload']:
-      project = get_project(name, args['SCRIPT'])
       if args['--zip']:
         self.upload(
           args['--zip'],
@@ -175,7 +182,5 @@ def main(args):
     stderr.write('%s\n' % (err, ))
     exit(1)
 
-
 if __name__ == '__main__':
-  args = docopt(__doc__, version=__version__)
-  main(args)
+  main()
